# ai-nalyst

./: .env.example  .gitignore  EXEMPLOS.md  README.md  app.py  pyproject.toml
dbt_layer/: .user.yml  dbt_project.yml  profiles.yml
dbt_layer/models/marts/: fct_reviews.sql  fct_sales.sql  schema.yml
dbt_layer/models/staging/: schema.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_reviews.sql  stg_sellers.sql
src/: ingest.py
src/agent/: graph.py  nodes.py  rate_limiter.py  state.py
